# hallucipip

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
src/hallucipip/: __init__.py  cache.py  cli.py  finder.py  generator.py  prompts.py
tests/: test_cache.py  test_finder.py  test_prompts.py
