[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallucipip"
version = "0.2.0"
description = "Supply-chain security is hard. Have one dependency and hallucinate the rest."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Zander Mackie" }]
keywords = [
    "llm",
    "import-hook",
    "supply-chain",
    "prototyping",
    "developer-tools",
    "satire",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
]
dependencies = [
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/zmackie/hallucipip"
Repository = "https://github.com/zmackie/hallucipip"
Issues = "https://github.com/zmackie/hallucipip/issues"

[project.optional-dependencies]
dev = ["build>=1.2.2", "pytest>=8.0", "ruff>=0.11.0"]

[project.scripts]
hallucipip = "hallucipip.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/hallucipip"]
